# Rakurakumusicstation-NG

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  UPDATE_GUIDE.md  build_release.sh  crow_all.h  embedded_templates.hpp  index.html  install.sh  login.html  manifest.json  metadata.cpp  metadata.hpp  music_dl.py  panel.html  radioserver.cpp  requirements.txt  sessionmanager.hpp  settings.json  settings.json.example  sw.js
audio-engine/: CMakeLists.txt  INTEGRATION_GUIDE.cpp  audio_engine.toml.example  config.hpp  file_server.hpp  playback_reporter.hpp  redis_client.hpp
deploy/: Makefile  audio-engine.service  install.sh  radio-backend.service  radio.conf
docs/: architecture.md
legacy/cpp-engine/src/: audio_player.cpp  broadcast_buffer.hpp  command_queue.hpp  config.hpp  radio_server.cpp  stream_server.cpp  stream_server.hpp
radio-backend/: .env.example  Cargo.toml  config.toml.example
radio-backend/frontend/: FRONTEND.md  index.html  package-lock.json  package.json  vite.config.ts
radio-backend/frontend/public/: manifest.json  sw.js
radio-backend/frontend/src/: App.vue  api.ts  main.ts  router.ts  store.ts  style.css  types.ts
radio-backend/frontend/src/api/: admin.ts  auth.ts  client.ts  ncm.ts  playlists.ts  queue.ts  songs.ts  station.ts  websocket.ts
radio-backend/frontend/src/api/websocket/: connection.ts  fallbackPolling.ts  interpolation.ts  messages.ts
radio-backend/frontend/src/app/: audioControls.ts  filePlayback.ts  useLiveAudio.ts  useThemeSync.ts
radio-backend/frontend/src/components/: AmProgressBar.vue  AuthModal.vue  DynamicBackground.vue  HeaderBar.vue  LyricsView.vue  MiniPlayer.vue  NavTabs.vue  NcmSettings.vue  StatusMessage.vue  ToastContainer.vue
radio-backend/frontend/src/components/admin/: AdminDownload.vue  AdminNcm.vue  AdminSettings.vue  AdminSongs.vue  AdminStats.vue  AdminUpload.vue  AdminUsers.vue
radio-backend/frontend/src/components/lt/: LtGroupList.vue  LtLyricsPanel.vue  LtPageShell.vue  LtPlayerCard.vue  LtQueuePanel.vue  LtSidebar.vue
radio-backend/frontend/src/composables/: useListenTogetherLayout.ts
radio-backend/frontend/src/views/: AdminView.vue  LibraryView.vue  NowPlayingView.vue  PlayerView.vue  QueueView.vue  SettingsView.vue  UpNextView.vue
radio-backend/migrations/: 001_initial_schema.sql  002_seed_defaults.sql  003_user_ncm.sql  004_device_auth.sql  005_user_requests.sql  006_ncm_import_tasks.sql  007_performance_indexes.sql
radio-backend/src/: auth.rs  config.rs  db.rs  error.rs  lyrics.rs  main.rs  models.rs  queue_manager.rs  templates.rs  websocket.rs
radio-backend/src/app/: bootstrap.rs  state.rs
radio-backend/src/http/: middleware.rs  mod.rs  stream.rs
radio-backend/src/models/: mod.rs  ws.rs
radio-backend/src/routes/: admin.rs  auth.rs  favorites.rs  mod.rs  ncm.rs  playlist.rs  queue.rs  songs.rs  station.rs
radio-backend/src/routes/admin/: batch_download.rs  download.rs  logout.rs  mod.rs  ncm.rs  playback.rs  settings.rs  songs.rs  stats.rs  upload.rs  users.rs
radio-backend/src/services/: download_tasks.rs  metadata.rs  mod.rs  netdisk.rs  playback_broadcast.rs  playback_snapshot.rs  queue.rs
radio-backend/src/services/ncm/: api.rs  client.rs  cookie.rs  crypto.rs  downloader.rs  mod.rs  playlist_track_all.rs  types.rs
radio-backend/static/: FRONTEND.md  app.js  index.html  manifest.json  style.css  sw.js
radio-backend/static/assets/: index--WConOJa.js  index-6ZlT-rxD.js  index-7O6BWzYy.js  index-A4Yok43H.css  index-B-EwSIGH.js  index-B5L2ECkN.css  index-BOwAf7ov.js  index-BXeJpVO-.css  index-BeDjru3l.js  index-BqRLXTpN.js  index-C1LfBtM1.js  index-C52yKwh6.css  index-C7tWmPR4.js  index-CBxfmxmG.js  index-CErs7rRh.css  index-CGPkVMLm.css  index-CKOxP6Th.js  index-CMqP1uvX.css  index-CQvTXt-N.js  index-CZ1C3yO0.js  index-Cjhys612.js  index-CtunLzSE.js  index-D870ek6g.js  index-DEfVu3Ac.css  index-DM4G7hJZ.css  index-DbYwEraP.js  index-DeADl94w.js  index-DeygjO68.css  index-Dzt6yxKg.js  index-Mdr_UEBZ.css  index-SCOf7FHh.css  index-cXPMTZxb.js  index-hqEEi1Jc.css  index-lNqHR2qI.js  index-oKK55PXn.css  index-rScRYztJ.js
radio-backend/templates/: admin.html  base.html  error.html  library.html  now_playing.html  queue.html  settings.html
radio-engine/: Cargo.toml
radio-engine/src/: config.rs  lib.rs  metadata.rs  player.rs  ring_buffer.rs  stream.rs  types.rs  util.rs
src/: audio_player.hpp  client_connection.cpp  client_connection.hpp  main.cpp  metadata.cpp  radio_server.cpp  radio_server.hpp  web_server.cpp  web_server.hpp
