[package]
name = "radio-backend"
version = "3.1.0-beta"
edition = "2021"
description = "Rakuraku Music Station - Rust Business Backend"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 框架
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "auth", "fs"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID 生成（用于设备令牌）
uuid = { version = "1", features = ["v4"] }

# 日期/时间
chrono = { version = "0.4", features = ["serde"] }

# 配置
toml = "0.8"
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 用于 LRC 解析的正则表达式
regex = "1"
once_cell = "1"

# 错误处理
thiserror = "1"
anyhow = "1"

# Base64 编码
base64 = "0.22"

# 流 / 异步 trait
futures-util = "0.3"
bytes = "1"

# 用于在 accept 时设置 TCP keepalive / user timeout，解决 hyper 在
# streaming 响应空闲期间漏检客户端断开导致连接/fd/任务泄漏的问题
socket2 = { version = "0.5", features = ["all"] }

# 并发数据结构
dashmap = "6"

# 音频引擎（本地 crate）
radio-engine = { path = "../radio-engine" }

# 网易云下载
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
aes = "0.8"
cipher = "0.4"
md-5 = "0.10"
rand = "0.8"
hex = "0.4"
id3 = "1.15"
tokio-stream = "0.1"
