[package]
name = "radio-engine"
version = "3.0.0"
edition = "2021"
description = "Rakuraku Music Station - Audio Engine (Rust rewrite)"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
rand = "0.8"
regex = "1"
axum = "0.7"
http = "1"
